--- a/portfolio-website/src/scenes/About/About.css
+++ b/portfolio-website/src/scenes/About/About.css
@@ -254,6 +254,11 @@ input:checked + .slider::before {
     margin-bottom: 2rem;
   }
 
+  .about-image-container {
+    width: 100% !important;
+    height: auto !important;
+  }
+
   .about-image {
     width: 100%;
     height: auto;
